--- a/generic.html
+++ b/generic.html
@@ -52,9 +52,8 @@
 					<h2><a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/Kurzgesagt/KURZGESAGT"
 							target="_blank">Analysis of my Favourite
 							Kurzgesagt videos<br /></a></h2>
-					<p>This project visualizes my favourite videos from my favourite YouTube channel. Data was scrapped
-						using YouTube's developer API, data cleaning was done in python using regex.
-						Design was done using Figma, and final visualization was done using Tableau.
+					<p>A visualization of my favourite videos from Kurzgesagt. Data was scrapped
+						using YouTube's API. <br>Tools used include: Python, Tableau, and Figma.<br />
 
 						.</p>
 				</header>
@@ -77,8 +76,8 @@
 					</header>
 					<a href="https://nbviewer.org/github/Jeremyugo/US-2015-Census/blob/main/Census%20Data.ipynb"
 						target="_blank" class="image fit"><img src="images/Census.jpg" alt="" /></a>
-					<p>In this project, we carry out exploratory data analysis on the 2015 US census dataset.
-						Visualization was done using various python visualization libraries.
+					<p>Exploratory data analysis on the 2015 US census dataset.
+						<br>Tools used include: Python, Matplotlib, and Seaborn<br />.
 					</p>
 					<ul class="actions special">
 						<li><a href="https://nbviewer.org/github/Jeremyugo/US-2015-Census/blob/main/Census%20Data.ipynb"
@@ -93,14 +92,29 @@
 					</header>
 					<a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/Draft_16812655819800/page1"
 						target="_blank" class="image fit"><img src="images/Nigeria.jpg" alt="" /></a>
-					<p>In this project, we visualize data on multidimensional poverty in Nigeria. Design was done using
-						Figma.</p>
+					<p>Visualization of multidimensional poverty in Nigeria. <br>Tools used include: Tableau, and
+						Figma.<br /></p>
 					<ul class="actions special">
 						<li><a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/Draft_16812655819800/page1"
 								target="_blank" class="button">View
 								Project</a></li>
 					</ul>
 				</article>
+
+				<article>
+					<header>
+						<h2><a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/EarthQuakeViz_16732369074320/Dashboard1"
+								target="_blank">Earthquakes of a Century</a></h2>
+					</header>
+					<a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/EarthQuakeViz_16732369074320/Dashboard1"
+						target="_blank" class="image fit"><img src="images/earthq.jpeg" alt="" /></a>
+					<p>Visualization of significant Earthquakes in the world since 1921</p>
+					<ul class="actions special">
+						<li><a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/EarthQuakeViz_16732369074320/Dashboard1"
+								target="_blank" class="button">View project</a></li>
+					</ul>
+				</article>
+
 				<article>
 					<header>
 						<h2><a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/FirstDashboard_16738430690470/Overview"
