--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 		<!-- Intro -->
 		<div id="intro">
 			<h1>Jeremiah Chinyelugo</h1>
-			<p>Welcome to my data science and data visualization portfolio.<br>Skills: Python, Scikit-learn,
-				Tensorflow, Streamlit, Tableau, PowerBI, Figma & SQL.
+			<p>Welcome to my data science and data visualization portfolio.<br>Technical Skills: Python, SQL,
+				Scikit-learn,
+				Tensorflow, Keras, Ollama, LangChain, DSPy, Docker, PySpark, DVC, MLFlow, Airflow, Azure, AWS, Tableau,
+				PowerBI, Figma, and
+				Streamlit.
 			</p>
 			<ul class="actions">
 				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -58,17 +61,16 @@
 			<article class="post featured">
 				<header class="major">
 
-					<h2><a href="https://github.com/Jeremyugo/Credit-score-classification" target="_blank">Credit score
-							classification<br /></a></h2>
-					<p>In this project, we create a multi-class classifier capable of predicting a bank customers credit
-						score using 63 features. The dataset used for this project contains outliers, missing values,
-						and bad data, so extensive data cleaning and preprocessing was done.
-						A voting classifier consisting of four (4) estimators was used to create the final model.</p>
+					<h2><a href="https://github.com/Jeremyugo/AzureMLOps-CI-CD-Passenger-Satisfaction"
+							target="_blank">Predicting Passenger Satisfaction (CI/CD) - AzureMLOps &
+							DevOps<br /></a></h2>
+					<p>End-to-end CI-CD pipeline and infrastructure for training and deploying a passenger
+						classification model. </p>
 				</header>
-				<a href="https://github.com/Jeremyugo/Credit-score-classification" target="_blank"
-					class="image main"><img src="images/credit.png" alt="" /></a>
+				<a href="https://github.com/Jeremyugo/AzureMLOps-CI-CD-Passenger-Satisfaction" target="_blank"
+					class="image main"><img src="images/azure.png" alt="" /></a>
 				<ul class="actions special">
-					<li><a href="https://github.com/Jeremyugo/Credit-score-classification" target="_blank"
+					<li><a href="https://github.com/Jeremyugo/AzureMLOps-CI-CD-Passenger-Satisfaction" target="_blank"
 							class="button large">View Project</a></li>
 				</ul>
 			</article>
@@ -76,25 +78,119 @@
 			<!-- Other Posts -->
 			<section class="posts">
 
+
 				<article>
 					<header>
 
-						<h2><a href="https://github.com/Jeremyugo/Used-car-price-prediction" target="_blank">Used car
-								price<br />
-								Prediction<br /></a></h2>
+						<h2><a href="https://github.com/Jeremyugo/Anomaly-Detection" target="_blank">Multivariate
+								Anomaly Detection using ensemble algorithms<br /></a></h2>
 					</header>
-					<a href="https://github.com/Jeremyugo/Used-car-price-prediction" target="_blank"
-						class="image fit"><img src="images/cars.jpg" alt="" /></a>
+					<a href="https://github.com/Jeremyugo/Anomaly-Detection" target="_blank" class="image fit"><img
+							src="images/anomaly.png" alt="" /></a>
+					<p>An Ensemble anomaly detection algorithm consisting of Isolation Forests, and Auto-Encoder is
+						created to identify anomalous instances in Multivariate time-series data.
+						<br />
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/Jeremyugo/Anomaly-Detection" target="_blank" class="button">View
+								Project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+
+						<h2><a href="https://github.com/Jeremyugo/RAG-Framework-using-DSPy" target="_blank">R.A.G
+								Framework using Stanford's DSPy<br /></a></h2>
+					</header>
+					<a href="https://github.com/Jeremyugo/RAG-Framework-using-DSPy" target="_blank"
+						class="image fit"><img src="images/dspy.png" alt="" /></a>
+					<p>A RAG framework for building RAG applications using Standford's DSPy capable of optimizing
+						prompts using in-context learning, chain-of-thought, thereby outperforming traditional RAG
+						applications.
+						<br />
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/Jeremyugo/RAG-Framework-using-DSPy" target="_blank"
+								class="button">View
+								Project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+
+						<h2><a href="https://github.com/Jeremyugo/mlops-car-prediction" target="_blank">MLOPS - Car
+								Price Prediction<br /></a></h2>
+					</header>
+					<a href="https://github.com/Jeremyugo/mlops-car-prediction" target="_blank" class="image fit"><img
+							src="images/cars.jpg" alt="" /></a>
+					<p>A locally hosted containerized CI-CD pipeline for End-to-End MLOps, using docker, dvc, mlflow,
+						and GitHub Actions.
+						<br />
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/Jeremyugo/mlops-car-prediction" target="_blank"
+								class="button">View
+								Project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+
+						<h2><a href="https://github.com/Jeremyugo/RAG-Application-Mistral7B-" target="_blank">R.A.G
+								Application
+								using Mistral-7B<br /></a></h2>
+					</header>
+					<a href="https://github.com/Jeremyugo/RAG-Application-Mistral7B-" target="_blank"
+						class="image fit"><img src="images/mistral.jpeg" alt="" /></a>
+					<p>Traditional Retrieval Augmented Generation Application using locally hosted Mistral-7B.
+						<br />
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/Jeremyugo/RAG-Application-Mistral7B-" target="_blank"
+								class="button">View
+								Project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+
+						<h2><a href="https://github.com/Jeremyugo/text2img" target="_blank"> Text-2-Image using Stable
+								diffusion<br /></a></h2>
+					</header>
+					<a href="https://github.com/Jeremyugo/text2img" target="_blank" class="image fit"><img
+							src="images/txt2img.jpeg" alt="" /></a>
+					<p>Containerized Text-2-Image application using hugging face's Stable Diffusion.
+						<br />
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/Jeremyugo/text2img" target="_blank" class="button">View
+								Project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+
+						<h2><a href="https://github.com/Jeremyugo/Credit-score-classification" target="_blank">Credit
+								score classification<br /></a></h2>
+					</header>
+					<a href="https://github.com/Jeremyugo/Credit-score-classification" target="_blank"
+						class="image fit"><img src="images/credit.png" alt="" /></a>
 					<p>In this project, we create a simple regression model using the used car price dataset. Five (5)
 						estimators were used to train the final voting regressor model which achived an R2 of 95%.
 						<br />
 					</p>
 					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/Used-car-price-prediction" target="_blank"
+						<li><a href="https://github.com/Jeremyugo/Credit-score-classification" target="_blank"
 								class="button">View
 								Project</a></li>
 					</ul>
 				</article>
+
 
 				<article>
 					<header>
@@ -130,23 +226,6 @@
 					</p>
 					<ul class="actions special">
 						<li><a href="https://github.com/Jeremyugo/News-Category-Classifier" target="_blank"
-								class="button">View Project</a></li>
-					</ul>
-				</article>
-
-				<article>
-					<header>
-						<h2><a href="https://github.com/Jeremyugo/Text-Summarization-BART-Large" target="_blank">Text
-								Summarization<br />
-								using BART-Large<br /></a></h2>
-					</header>
-					<a href="https://github.com/Jeremyugo/Text-Summarization-BART-Large" target="_blank"
-						class="image fit"><img src="images/text_4.jpg" alt="" /></a>
-					<p>In this project, we create a text summarizer using a large language model
-						<br />
-					</p>
-					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/Text-Summarization-BART-Large" target="_blank"
 								class="button">View Project</a></li>
 					</ul>
 				</article>
@@ -247,25 +326,7 @@
 								target="_blank" class="button">View Project</a></li>
 					</ul>
 				</article>
-				<article>
-					<header>
-						<h2><a href="https://github.com/Jeremyugo/Basic-Handwritten-Equation-Solver"
-								target="_blank">Basic
-								Handwritten<br />
-								Equation Solver</a></h2>
-					</header>
-					<a href="https://github.com/Jeremyugo/Basic-Handwritten-Equation-Solver" target="_blank"
-						class="image fit"><img src="images/Equation.jpg" alt="" /></a>
-					<p>In this project, we create a streamlit app that can segment digits and operators to perform basic
-						math calculations.
-						<br />
-						*Please wait a few minutes for the app to boot.
-					</p>
-					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/Basic-Handwritten-Equation-Solver" target="_blank"
-								class="button">View App</a></li>
-					</ul>
-				</article>
+
 				<article>
 					<header>
 						<h2><a href="https://jeremyugo-salary-prediction-app-an2gpv.streamlit.app/"
@@ -333,24 +394,7 @@
 								target="_blank" class="button">View Project</a></li>
 					</ul>
 				</article>
-				<article>
-					<header>
-						<h2><a href="https://github.com/Jeremyugo/Others/blob/main/Airline%20Passenger%20Satisfaction%20(96%25%20f1_score%20on%20Test%20Set).ipynb"
-								target="_blank">
-								Airline Passenger<br />
-								Satisfaction</a></h2>
-					</header>
-					<a href="https://github.com/Jeremyugo/Others/blob/main/Airline%20Passenger%20Satisfaction%20(96%25%20f1_score%20on%20Test%20Set).ipynb"
-						target="_blank" class="image fit"><img src="images/Airplane_2.jpg" alt="" /></a>
-					<p>In this project, we create a classification model that can accurately predict the satisfaction
-						levels of airline passengers. Additionally, we delve into the concept of precision/recall
-						trade-off, its implementaion, and how it applies to various business scenarios that require
-						higher precision or recall.</p>
-					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/Others/blob/main/Airline%20Passenger%20Satisfaction%20(96%25%20f1_score%20on%20Test%20Set).ipynb"
-								target="_blank" class="button">View Project</a></li>
-					</ul>
-				</article>
+
 				<article>
 					<header>
 						<h2><a href="https://github.com/Jeremyugo/Others/blob/main/Breast%20Cancer%20Model%20(100%25%20Accuracy%20on%20Test%20Set).ipynb"
@@ -367,21 +411,7 @@
 								target="_blank" class="button">View Project</a></li>
 					</ul>
 				</article>
-				<article>
-					<header>
-						<h2><a href="https://github.com/Jeremyugo/Wikipedia-Text-Summarization/blob/main/Wikipedia%20Text%20Summarization%20-%20No%20model.ipynb"
-								target="_blank">
-								Wikipedia Text<br />
-								Summarizer</a></h2>
-					</header>
-					<a href="https://github.com/Jeremyugo/Wikipedia-Text-Summarization/blob/main/Wikipedia%20Text%20Summarization%20-%20No%20model.ipynb"
-						target="_blank" class="image fit"><img src="images/Wikipedia.jpg" alt="" /></a>
-					<p>In this project, we create a wikipedia text summarizer using nltk and a word frequency table.</p>
-					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/Wikipedia-Text-Summarization/blob/main/Wikipedia%20Text%20Summarization%20-%20No%20model.ipynb"
-								target="_blank" class="button">View Project</a></li>
-					</ul>
-				</article>
+
 			</section>
 
 			<!-- Footer -->
