remove few projects from portfolio

--- a/index.html
+++ b/index.html
@@ -232,58 +232,20 @@
 
 				<article>
 					<header>
-						<h2><a href="https://github.com/Jeremyugo/Semantic-Search-on-Texts" target="_blank">Semantic
-								search
-								<br />
-								on Texts<br /></a></h2>
+						<h2><a href="https://github.com/Jeremyugo/Anime-Recommendation-system" target="_blank">TV-Show
+								recommender using Tensorflow Recommenders<br /></a></h2>
 					</header>
-					<a href="https://github.com/Jeremyugo/Semantic-Search-on-Texts" target="_blank"
-						class="image fit"><img src="images/text_1.jpg" alt="" /></a>
-					<p>In this project, we use a universal encoder to search for similar texts
+					<a href="https://github.com/Jeremyugo/Anime-Recommendation-system" target="_blank"
+						class="image fit"><img src="images/anime.jpeg" alt="" /></a>
+					<p>In this project, various algorithms, and techniques such as jaccard/cosine similarity and
+						Tensorflow Recommenders (TFRS) are used to build user-item, item-item, and hybrid recommendation
+						system
 						<br />
 					</p>
 					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/Semantic-Search-on-Texts" target="_blank"
-								class="button">View Project</a></li>
-					</ul>
-				</article>
-
-				<article>
-					<header>
-						<h2><a href="https://github.com/Jeremyugo/Book-recommender-using-tensorflow-recommenders"
-								target="_blank">Book recommender using<br />
-								Tensorflow Recommenders<br /></a></h2>
-					</header>
-					<a href="https://github.com/Jeremyugo/Book-recommender-using-tensorflow-recommenders"
-						target="_blank" class="image fit"><img src="images/book.jpg" alt="" /></a>
-					<p>In this project, we build a book recommendation system using Tensorflow Recommenders (TFRS). The
-						model leverages
-						the power of deep learning and recommendation algorithms to suggest personalized book
-						recommendations based on user preferences
-						<br />
-					</p>
-					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/Book-recommender-using-tensorflow-recommenders"
-								target="_blank" class="button">View
+						<li><a href="https://github.com/Jeremyugo/Anime-Recommendation-system" target="_blank"
+								class="button">View
 								Project</a></li>
-					</ul>
-				</article>
-
-				<article>
-					<header>
-						<h2><a href="https://github.com/Jeremyugo/Image-enhancement-using-ersgan-tf2"
-								target="_blank">Image enhancement<br />
-								using esrgan-tf2<br /></a></h2>
-					</header>
-					<a href="https://github.com/Jeremyugo/Image-enhancement-using-ersgan-tf2" target="_blank"
-						class="image fit"><img src="images/Super Resolution_3.jpg" alt="" /></a>
-					<p>In this project, we use a pre-trained enhanced super resolution GAN model to improve the
-						resolution of 3 selected images
-						<br />
-					</p>
-					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/Image-enhancement-using-ersgan-tf2" target="_blank"
-								class="button">View Project</a></li>
 					</ul>
 				</article>
 
@@ -391,23 +353,6 @@
 						a multioutput regressor.</p>
 					<ul class="actions special">
 						<li><a href="https://github.com/Jeremyugo/EPL-Game-by-Game-Table---Predictor/blob/main/epl-game-by-game-and-final-table-prediction-2022.ipynb"
-								target="_blank" class="button">View Project</a></li>
-					</ul>
-				</article>
-
-				<article>
-					<header>
-						<h2><a href="https://github.com/Jeremyugo/Others/blob/main/Breast%20Cancer%20Model%20(100%25%20Accuracy%20on%20Test%20Set).ipynb"
-								target="_blank">
-								Breast<br />
-								Cancer</a></h2>
-					</header>
-					<a href="https://github.com/Jeremyugo/Others/blob/main/Breast%20Cancer%20Model%20(100%25%20Accuracy%20on%20Test%20Set).ipynb"
-						target="_blank" class="image fit"><img src="images/Breast.jpg" alt="" /></a>
-					<p>In this project, we create a binary classifier with a high recall that can predict if a patient
-						has breast cancer.</p>
-					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/Others/blob/main/Breast%20Cancer%20Model%20(100%25%20Accuracy%20on%20Test%20Set).ipynb"
 								target="_blank" class="button">View Project</a></li>
 					</ul>
 				</article>
