add flow project

--- a/index.html
+++ b/index.html
@@ -119,6 +119,42 @@
 
 				<article>
 					<header>
+						<h2><a href="https://github.com/Jeremyugo/Oil-production-forecasting-using-LSTM-GRU-and-CONV-LSTM-seq2vec-seq2seq-models-/blob/main/Oil%20Forecasting.ipynb"
+								target="_blank">Oil
+								rate forecasting<br />
+								Using CONV-LSTM</a></h2>
+					</header>
+					<a href="https://github.com/Jeremyugo/Oil-production-forecasting-using-LSTM-GRU-and-CONV-LSTM-seq2vec-seq2seq-models-/blob/main/Oil%20Forecasting.ipynb"
+						target="_blank" class="image fit"><img src="images/Oil.jpg" alt="" /></a>
+					<p>In this project, we create LSTM, GRU, & Seq-2-Vec/Seq-2-Seq CONV-LSTM models capable of
+						predicting future oil production rates.</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/Jeremyugo/Oil-production-forecasting-using-LSTM-GRU-and-CONV-LSTM-seq2vec-seq2seq-models-/blob/main/Oil%20Forecasting.ipynb"
+								target="_blank" class="button">View project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+						<h2><a href="https://github.com/Jeremyugo/School-Related/blob/main/finding_wellbore_pressure_traverse.ipynb"
+								target="_blank">Finding Pressure Traverse in a Wellbore using <br />
+								Two-Phase Model</a>
+						</h2>
+					</header>
+					<a href="https://github.com/Jeremyugo/School-Related/blob/main/finding_wellbore_pressure_traverse.ipynb"
+						target="_blank" class="image fit"><img src="images/flow.png" alt="" /></a>
+					<p>In this project, we use the Kartoatmodjo and Schmidt oil viscosity & Beggs and Brill Two-phase
+						Model to find the
+						pressure traverse across a 10,000ft wellbore with GOR of 1,500 SCF/STB, flowing at 600 STB/day
+						at surface.</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/Jeremyugo/School-Related/blob/main/finding_wellbore_pressure_traverse.ipynb"
+								target="_blank" class="button">View project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
 
 						<h2><a href="https://github.com/Jeremyugo/mlops-car-prediction" target="_blank">MLOPS - Car
 								Price Prediction<br /></a></h2>
@@ -306,22 +342,7 @@
 								App</a></li>
 					</ul>
 				</article>
-				<article>
-					<header>
-						<h2><a href="https://github.com/Jeremyugo/Oil-production-forecasting-using-LSTM-GRU-and-CONV-LSTM-seq2vec-seq2seq-models-/blob/main/Oil%20Forecasting.ipynb"
-								target="_blank">Oil
-								rate forecasting<br />
-								Using CONV-LSTM</a></h2>
-					</header>
-					<a href="https://github.com/Jeremyugo/Oil-production-forecasting-using-LSTM-GRU-and-CONV-LSTM-seq2vec-seq2seq-models-/blob/main/Oil%20Forecasting.ipynb"
-						target="_blank" class="image fit"><img src="images/Oil.jpg" alt="" /></a>
-					<p>In this project, we create LSTM, GRU, & Seq-2-Vec/Seq-2-Seq CONV-LSTM models capable of
-						predicting future oil production rates.</p>
-					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/Oil-production-forecasting-using-LSTM-GRU-and-CONV-LSTM-seq2vec-seq2seq-models-/blob/main/Oil%20Forecasting.ipynb"
-								target="_blank" class="button">View project</a></li>
-					</ul>
-				</article>
+
 				<article>
 					<header>
 						<h2><a href="https://github.com/Jeremyugo/CIFAR-10/blob/main/cifar-10.ipynb"
