add lithofacie project

--- a/index.html
+++ b/index.html
@@ -78,6 +78,25 @@
 			<!-- Other Posts -->
 			<section class="posts">
 
+				<article>
+					<header>
+
+						<h2><a href="https://github.com/Jeremyugo/Lithofacies-Classification"
+								target="_blank">Lithofacies Prediction based on well logs and NDP
+								lithostratigraphy<br /></a></h2>
+					</header>
+					<a href="https://github.com/Jeremyugo/Lithofacies-Classification" target="_blank"
+						class="image fit"><img src="images/wellslogs_1.png" alt="" /></a>
+					<p>Lithography classification using a custom XGboost production-ready mlflow model trained based on
+						best parameters from randomized grid search of provided hyper-paramter space.
+						<br />
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/Jeremyugo/Lithofacies-Classification" target="_blank"
+								class="button">View
+								Project</a></li>
+					</ul>
+				</article>
 
 				<article>
 					<header>
@@ -343,23 +362,6 @@
 					</ul>
 				</article>
 
-				<article>
-					<header>
-						<h2><a href="https://github.com/Jeremyugo/CIFAR-10/blob/main/cifar-10.ipynb"
-								target="_blank">CIFAR-10
-								using<br />
-								Transfer learning</a></h2>
-					</header>
-					<a href="https://github.com/Jeremyugo/CIFAR-10/blob/main/cifar-10.ipynb" target="_blank"
-						class="image fit"><img src="images/Cifar.png" alt="" /></a>
-					<p>In this project, we compare the performance of three (3) convolutional neural network models
-						trained without image augmentation, with image augmentation, and with transfer learning.</p>
-					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/CIFAR-10/blob/main/cifar-10.ipynb" target="_blank"
-								class="button">View
-								Project</a></li>
-					</ul>
-				</article>
 				<article>
 					<header>
 						<h2><a href="https://github.com/Jeremyugo/EPL-Game-by-Game-Table---Predictor/blob/main/epl-game-by-game-and-final-table-prediction-2022.ipynb"
