add intro to data-viz

--- a/generic.html
+++ b/generic.html
@@ -22,6 +22,21 @@
 	<!-- Wrapper -->
 	<div id="wrapper">
 
+		<div id="intro">
+			<h1>Jeremiah Chinyelugo</h1>
+			<p style="font-size: 25px; font-weight: 600; line-height: 1.5;">
+				Welcome to my Data Science and Visualization portolio
+			</p>
+			<p style="text-align: left;">
+				Technical Skills: Python, SQL, Langchain, Scikit-learn, Tensorflow(keras), MLFlow, Docker, DVC, Azure,
+				Apache Spark, Databricks, PostgreSQL, Power BI(DAX), Tableau & Figma<br>
+
+			</p>
+			<ul class="actions">
+				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+			</ul>
+		</div>
+
 
 		<!-- Header -->
 		<header id="header">
