--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 		<!-- Intro -->
 		<div id="intro">
 			<h1>Jeremiah Chinyelugo</h1>
-			<p>Welcome to my data science and data visualization portfolio.<br>Technical Skills: Python, SQL,
-				Scikit-learn,
-				Tensorflow, Keras, Ollama, LangChain, DSPy, Docker, PySpark, DVC, MLFlow, Airflow, Azure, AWS, Tableau,
-				PowerBI, Figma, and
-				Streamlit.
+			<p style="font-size: 25px; font-weight: 600; line-height: 1.5;">
+				Welcome to my Data Science and Visualization portolio
+			</p>
+			<p style="text-align: left;">
+				Technical Skills: Python, SQL, Langchain, Scikit-learn, Tensorflow(keras), MLFlow, Docker, DVC, Azure,
+				Apache Spark, Databricks, PostgreSQL, Power BI(DAX), Tableau & Figma<br>
+
 			</p>
 			<ul class="actions">
 				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
