change tensorflow projects images

--- a/index.html
+++ b/index.html
@@ -237,8 +237,9 @@
 					</header>
 					<a href="https://github.com/Jeremyugo/Credit-score-classification" target="_blank"
 						class="image fit"><img src="images/credit.png" alt="" /></a>
-					<p>In this project, we create a simple regression model using the used car price dataset. Five (5)
-						estimators were used to train the final voting regressor model which achived an R2 of 95%.
+					<p>Built a soft voting ensemble classifier consisting of four (4) estimators to predict customer
+						credit score based on customer demographics, financial status, and credit history. Synthetic
+						Minority Oversampling Technique (SMOTE) was used to handle imbalanced dataset.
 						<br />
 					</p>
 					<ul class="actions special">
@@ -253,8 +254,7 @@
 					<header>
 
 						<h2><a href="https://github.com/Jeremyugo/Text-Clustering" target="_blank">Text
-								Clustering using<br />
-								Kmeans & TSNE<br /></a></h2>
+								Clustering using Kmeans, text-encoder & TSNE<br /></a></h2>
 					</header>
 					<a href="https://github.com/Jeremyugo/Text-Clustering" target="_blank" class="image fit"><img
 							src="images/text_3.png" alt="" /></a>
@@ -270,12 +270,12 @@
 
 				<article>
 					<header>
-						<h2><a href="https://github.com/Jeremyugo/News-Category-Classifier" target="_blank">News
-								Category<br />
-								Classifier<br /></a></h2>
+						<h2><a href="https://github.com/Jeremyugo/News-Category-Classifier" target="_blank">Tensorflow
+								Functional API News
+								Category classification<br /></a></h2>
 					</header>
 					<a href="https://github.com/Jeremyugo/News-Category-Classifier" target="_blank"
-						class="image fit"><img src="images/text_2.jpg" alt="" /></a>
+						class="image fit"><img src="images/keras.png" alt="" /></a>
 					<p>In this project, we create a news category classifier that can distinguish 42 news category. A
 						keras functional model with three(3) input layers and embedding layers trained from scratch was
 						used
@@ -293,7 +293,7 @@
 								recommender using Tensorflow Recommenders<br /></a></h2>
 					</header>
 					<a href="https://github.com/Jeremyugo/Anime-Recommendation-system" target="_blank"
-						class="image fit"><img src="images/anime.jpeg" alt="" /></a>
+						class="image fit"><img src="images/tensorflow.jpg" alt="" /></a>
 					<p>In this project, various algorithms, and techniques such as jaccard/cosine similarity and
 						Tensorflow Recommenders (TFRS) are used to build user-item, item-item, and hybrid recommendation
 						system
@@ -309,11 +309,11 @@
 				<article>
 					<header>
 						<h2><a href="https://github.com/Jeremyugo/Sports-classifier-using-ResNet-50"
-								target="_blank">Sports classification<br />
+								target="_blank">Sports Image classification
 								using ResNet-50<br /></a></h2>
 					</header>
 					<a href="https://github.com/Jeremyugo/Sports-classifier-using-ResNet-50" target="_blank"
-						class="image fit"><img src="images/sports_1.jpg" alt="" /></a>
+						class="image fit"><img src="images/cnn.png" alt="" /></a>
 					<p>In this project, we create a model capable of classifying 100 sports with 95% accuracy using a
 						pretrained ResNet-50 model
 						<br />
