add semi-supervised learning project

--- a/index.html
+++ b/index.html
@@ -121,19 +121,20 @@
 				<article>
 					<header>
 
-						<h2><a href="https://github.com/Jeremyugo/RAG-Framework-using-DSPy" target="_blank">R.A.G
-								Framework using Stanford's DSPy<br /></a></h2>
+						<h2><a href="https://github.com/Jeremyugo/Semi-Supervised-Learning/blob/main/notebooks/01_semi-supervised.ipynb"
+								target="_blank">Semi-Supervised Learning using Sklearn & Tensorflow<br /></a></h2>
 					</header>
-					<a href="https://github.com/Jeremyugo/RAG-Framework-using-DSPy" target="_blank"
-						class="image fit"><img src="images/dspy.png" alt="" /></a>
-					<p>A RAG framework for building RAG applications using Standford's DSPy capable of optimizing
-						prompts using in-context learning, chain-of-thought, thereby outperforming traditional RAG
-						applications.
+					<a href="https://github.com/Jeremyugo/Semi-Supervised-Learning/blob/main/notebooks/01_semi-supervised.ipynb"
+						target="_blank" class="image fit"><img src="images/semi.png" alt="" /></a>
+					<p>Unsupervised learning problems are common in the real-world because there is a lot of unlabeled
+						data as data labeling is time-consuming and expensive.
+						This project details several techniques for performing semi-supervised learning using popular
+						libraries like Sklearn and Tensorflow.
 						<br />
 					</p>
 					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/RAG-Framework-using-DSPy" target="_blank"
-								class="button">View
+						<li><a href="https://github.com/Jeremyugo/Semi-Supervised-Learning/blob/main/notebooks/01_semi-supervised.ipynb"
+								target="_blank" class="button">View
 								Project</a></li>
 					</ul>
 				</article>
@@ -188,6 +189,26 @@
 					</p>
 					<ul class="actions special">
 						<li><a href="https://github.com/Jeremyugo/mlops-car-prediction" target="_blank"
+								class="button">View
+								Project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+
+						<h2><a href="https://github.com/Jeremyugo/RAG-Framework-using-DSPy" target="_blank">R.A.G
+								Framework using Stanford's DSPy<br /></a></h2>
+					</header>
+					<a href="https://github.com/Jeremyugo/RAG-Framework-using-DSPy" target="_blank"
+						class="image fit"><img src="images/dspy.png" alt="" /></a>
+					<p>A RAG framework for building RAG applications using Standford's DSPy capable of optimizing
+						prompts using in-context learning, chain-of-thought, thereby outperforming traditional RAG
+						applications.
+						<br />
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/Jeremyugo/RAG-Framework-using-DSPy" target="_blank"
 								class="button">View
 								Project</a></li>
 					</ul>
