add semi-supervised learning project

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 				<article>
 					<header>
 
-						<h2><a href="https://github.com/Jeremyugo/Lithofacies-Classification"
-								target="_blank">Lithofacies Prediction based on well logs and NDP
+						<h2><a href="https://github.com/Jeremyugo/Lithofacies-Classification" target="_blank">Predicting
+								Lithofacies based on well logs and NDP
 								lithostratigraphy<br /></a></h2>
 					</header>
 					<a href="https://github.com/Jeremyugo/Lithofacies-Classification" target="_blank"
