add link to car-pred app

--- a/index.html
+++ b/index.html
@@ -184,13 +184,13 @@
 					<a href="https://github.com/Jeremyugo/mlops-car-prediction" target="_blank" class="image fit"><img
 							src="images/cars.jpg" alt="" /></a>
 					<p>A locally hosted containerized CI-CD pipeline for End-to-End MLOps, using docker, dvc, mlflow,
-						and GitHub Actions.
+						and GitHub Actions.<br>
+						<strong>Click on project title to view GitHub repo</strong>
 						<br />
 					</p>
 					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/mlops-car-prediction" target="_blank"
-								class="button">View
-								Project</a></li>
+						<li><a href="http://199.116.235.125:8501/" target="_blank" class="button">Use Streamlit App</a>
+						</li>
 					</ul>
 				</article>
 
