change semi-sup link to main

--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
 				<article>
 					<header>
 
-						<h2><a href="https://github.com/Jeremyugo/Semi-Supervised-Learning/blob/main/notebooks/01_semi-supervised.ipynb"
+						<h2><a href="https://github.com/Jeremyugo/Semi-Supervised-Learning/tree/main"
 								target="_blank">Semi-Supervised Learning using Sklearn & Tensorflow<br /></a></h2>
 					</header>
-					<a href="https://github.com/Jeremyugo/Semi-Supervised-Learning/blob/main/notebooks/01_semi-supervised.ipynb"
-						target="_blank" class="image fit"><img src="images/semi.png" alt="" /></a>
+					<a href="https://github.com/Jeremyugo/Semi-Supervised-Learning/tree/main" target="_blank"
+						class="image fit"><img src="images/semi.png" alt="" /></a>
 					<p>Unsupervised learning problems are common in the real-world because there is a lot of unlabeled
 						data as data labeling is time-consuming and expensive.
 						This project details several techniques for performing semi-supervised learning using popular
@@ -133,8 +133,8 @@
 						<br />
 					</p>
 					<ul class="actions special">
-						<li><a href="https://github.com/Jeremyugo/Semi-Supervised-Learning/blob/main/notebooks/01_semi-supervised.ipynb"
-								target="_blank" class="button">View
+						<li><a href="https://github.com/Jeremyugo/Semi-Supervised-Learning/tree/main" target="_blank"
+								class="button">View
 								Project</a></li>
 					</ul>
 				</article>
