add PowerBI viz

--- a/generic.html
+++ b/generic.html
@@ -64,24 +64,40 @@
 			<article class="post featured">
 				<header class="major">
 
-					<h2><a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/Kurzgesagt/KURZGESAGT"
-							target="_blank">Analysis of my Favourite
-							Kurzgesagt videos<br /></a></h2>
-					<p>A visualization of my favourite videos from Kurzgesagt. Data was scrapped
-						using YouTube's API. <br>Tools used include: Python, Tableau, and Figma.<br />
-
-						.</p>
+					<h2><a href="https://github.com/Jeremyugo/Others/blob/main/PowerBI/Power-BI.png"
+							target="_blank">Business Analysis Dashboard<br /></a></h2>
+					<p>A simple MS PowerBI visualization of business data. <br>Tools used include: MS PowerBI (for
+						dashboard),
+						and
+						Figma (for design)</p>
 				</header>
-				<a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/Kurzgesagt/KURZGESAGT"
-					target="_blank" class="image main"><img src="images/Kurz.jpg" alt="" /></a>
+				<a href="https://github.com/Jeremyugo/Others/blob/main/PowerBI/Power-BI.png" target="_blank"
+					class="image main"><img src="images/Power-BI.png" alt="" /></a>
 				<ul class="actions special">
-					<li><a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/Kurzgesagt/KURZGESAGT"
-							target="_blank" class="button large">View Project</a></li>
+					<li><a href="https://github.com/Jeremyugo/Others/blob/main/PowerBI/Power-BI.png" target="_blank"
+							class="button large">View Project</a></li>
 				</ul>
 			</article>
 
 			<!-- Other Posts -->
 			<section class="posts">
+				<article>
+					<header>
+						<h2><a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/Kurzgesagt/KURZGESAGT"
+								target="_blank">Analysis of my Kurzgesagt Videos
+							</a></h2>
+					</header>
+					<a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/Kurzgesagt/KURZGESAGT"
+						target="_blank" class="image fit"><img src="images/Kurz.jpg" alt="" /></a>
+					<p>A visualization of my favourite videos from Kurzgesagt. Data was scrapped
+						using YouTube's API. <br>Tools used include: Python, Tableau, and Figma.<br />
+					</p>
+					<ul class="actions special">
+						<li><a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/Kurzgesagt/KURZGESAGT"
+								target="_blank" class="button">View Project</a></li>
+					</ul>
+				</article>
+
 				<article>
 					<header>
 						<h2><a href="https://nbviewer.org/github/Jeremyugo/US-2015-Census/blob/main/Census%20Data.ipynb"
@@ -99,6 +115,7 @@
 								target="_blank" class="button">View Project</a></li>
 					</ul>
 				</article>
+
 				<article>
 					<header>
 						<h2><a href="https://public.tableau.com/app/profile/jeremiah.chinyelugo/viz/Draft_16812655819800/page1"
