--- a/index.html
+++ b/index.html
@@ -103,6 +103,25 @@
 				<article>
 					<header>
 
+						<h2><a href="https://github.com/Jeremyugo/Airflow-ETL-pipeline" target="_blank">ETL pipeline
+								using Airflow, Docker & PostgreSQL<br /></a></h2>
+					</header>
+					<a href="https://github.com/Jeremyugo/Airflow-ETL-pipeline" target="_blank" class="image fit"><img
+							src="images/etl-1.png" alt="" /></a>
+					<p>A containerized ETL pipeline in Docker using Airflow as scheduler, and PostgreSQL database. Bash
+						script ingests data, python script transforms and loads the data into a table in Postgres.
+						<br />
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/Jeremyugo/Airflow-ETL-pipeline" target="_blank"
+								class="button">View
+								Project</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+
 						<h2><a href="https://github.com/Jeremyugo/Anomaly-Detection" target="_blank">Multivariate
 								Anomaly Detection using ensemble algorithms<br /></a></h2>
 					</header>
